test_regress/t/t_var_ref_bad2.out
%Error: t/t_var_ref_bad2.v:13:7: Assigning to const ref variable: 'bad_const_set'
                               : ... note: In instance 't'
   13 |       bad_const_set = 32'h4567;   
      |       ^~~~~~~~~~~~~
%Error: t/t_var_ref_bad2.v:23:17: Ref argument requires matching types; port 'int_ref' requires int but connection is byte.
                                : ... note: In instance 't'
   23 |       checkset2(bad_non_int);   
      |                 ^~~~~~~~~~~
%Error: Exiting due to
